uat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uat-ingress
  namespace: uat
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /spring-hello
        pathType: Prefix
        backend:
          service:
            name: uat-spring-rest-helloworld
            port:
              number: 8282
      - path: /angular-mfe-shell/
        pathType: Prefix
        backend:
          service:
            name: uat-angular-mfe-shell
            port:
              number: 8282
